--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^6.0.0-0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
